--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>SuperLab1Bros</title>
+  <title>Platform Game</title>
   <link href="./style/style.css" rel="stylesheet" type="text/css" />
   <script src="game.js"></script>
   <script src="levels.js"></script>
@@ -16,7 +16,7 @@
 
 <body>
   <script>
-    runGame(GAME_LEVELS, DOMDisplay);
+    runGame(GAME_LEVELS, CANVASDisplay);
   </script>
 </body>
 
